--- a/Ghost Runner/storyBoard/Base.lproj/Login.storyboard
+++ b/Ghost Runner/storyBoard/Base.lproj/Login.storyboard
@@ -18,16 +18,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="——— or ——— " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmq-dW-Ki1">
-                                <rect key="frame" x="145" y="679" width="138" height="24"/>
+                                <rect key="frame" x="145" y="760" width="138" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYQ-kl-gFl">
-                                <rect key="frame" x="20" y="626" width="388" height="45"/>
+                                <rect key="frame" x="20" y="718" width="388" height="34"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                <inset key="imageEdgeInsets" minX="10" minY="0.0" maxX="330" maxY="0.0"/>
+                                <inset key="imageEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="LOGIN">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -36,14 +36,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FB0-Es-XPe">
-                                <rect key="frame" x="20" y="817" width="388" height="45"/>
+                                <rect key="frame" x="20" y="792" width="124" height="50"/>
                                 <color key="backgroundColor" red="0.11784005910000001" green="0.29662424329999998" blue="0.53727960590000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="4bs-dv-bP7"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="320" maxY="0.0"/>
-                                <state key="normal" title="Login with Facebook" image="fb-icon">
+                                <inset key="imageEdgeInsets" minX="20" minY="-5" maxX="20" maxY="-5"/>
+                                <state key="normal" image="fb-icon">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -51,23 +48,24 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYR-ez-dZn">
-                                <rect key="frame" x="20" y="764" width="388" height="45"/>
-                                <color key="backgroundColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="152" y="792" width="124" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="aur-k5-THP"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
-                                <inset key="imageEdgeInsets" minX="5" minY="-7" maxX="320" maxY="-7"/>
-                                <state key="normal" title="Login with Google" image="google-icon"/>
+                                <inset key="imageEdgeInsets" minX="20" minY="-15" maxX="20" maxY="-15"/>
+                                <state key="normal" image="google-icon"/>
                                 <connections>
                                     <action selector="loginWithGoogle" destination="BYZ-38-t0r" eventType="touchUpInside" id="mYK-oL-mgy"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7WM-nf-n0i">
-                                <rect key="frame" x="20" y="711" width="388" height="45"/>
+                                <rect key="frame" x="284" y="792" width="124" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
-                                <inset key="imageEdgeInsets" minX="15" minY="5" maxX="335" maxY="5"/>
-                                <state key="normal" title="Login with Apple" image="apple-icon">
+                                <inset key="imageEdgeInsets" minX="35" minY="0.0" maxX="35" maxY="5"/>
+                                <state key="normal" image="apple-icon">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -75,13 +73,13 @@
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NT9-uH-aYZ">
-                                <rect key="frame" x="20" y="88" width="388" height="367"/>
+                                <rect key="frame" x="14" y="88" width="388" height="464"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <viewLayoutGuide key="contentLayoutGuide" id="0KK-4f-buj"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="2Na-Ha-vRG"/>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c3p-PR-fla">
-                                <rect key="frame" x="242" y="588" width="166" height="30"/>
+                                <rect key="frame" x="242" y="680" width="166" height="30"/>
                                 <state key="normal" title="First time user? Sign up.">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -89,52 +87,47 @@
                                     <action selector="signUp" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Ln-UU-yML"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u0M-Yg-Loy">
-                                <rect key="frame" x="20" y="504" width="388" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ukM-TL-7Bh">
-                                <rect key="frame" x="20" y="546" width="388" height="34"/>
+                                <rect key="frame" x="20" y="638" width="388" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="hdI-oG-U4z">
-                                <rect key="frame" x="153" y="463" width="122" height="28"/>
+                                <rect key="frame" x="154" y="560" width="122" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </pageControl>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u0M-Yg-Loy">
+                                <rect key="frame" x="20" y="596" width="388" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ukM-TL-7Bh" firstAttribute="top" secondItem="u0M-Yg-Loy" secondAttribute="bottom" constant="8" symbolic="YES" id="0Fm-L9-n0Z"/>
-                            <constraint firstItem="7WM-nf-n0i" firstAttribute="top" secondItem="nmq-dW-Ki1" secondAttribute="bottom" constant="8" symbolic="YES" id="3TY-1E-Y8K"/>
-                            <constraint firstItem="nmq-dW-Ki1" firstAttribute="top" secondItem="IYQ-kl-gFl" secondAttribute="bottom" constant="8" symbolic="YES" id="4h8-Um-idX"/>
-                            <constraint firstItem="FB0-Es-XPe" firstAttribute="height" secondItem="7WM-nf-n0i" secondAttribute="height" id="6DC-3F-TbJ"/>
-                            <constraint firstItem="FB0-Es-XPe" firstAttribute="width" secondItem="IYQ-kl-gFl" secondAttribute="width" id="6SJ-Yw-ze4"/>
+                            <constraint firstItem="7WM-nf-n0i" firstAttribute="width" secondItem="FB0-Es-XPe" secondAttribute="width" id="1w5-2l-Z48"/>
+                            <constraint firstItem="bYR-ez-dZn" firstAttribute="leading" secondItem="FB0-Es-XPe" secondAttribute="trailing" constant="8" symbolic="YES" id="2nw-QJ-nAx"/>
                             <constraint firstItem="u0M-Yg-Loy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7bm-Lr-O3g"/>
-                            <constraint firstItem="FB0-Es-XPe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Py-4p-Yxq"/>
-                            <constraint firstItem="FB0-Es-XPe" firstAttribute="top" secondItem="bYR-ez-dZn" secondAttribute="bottom" constant="8" symbolic="YES" id="9aY-uT-WO7"/>
-                            <constraint firstItem="bYR-ez-dZn" firstAttribute="width" secondItem="IYQ-kl-gFl" secondAttribute="width" id="9cB-1C-g0H"/>
+                            <constraint firstItem="FB0-Es-XPe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="9gG-gU-dpu"/>
                             <constraint firstItem="IYQ-kl-gFl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ayt-tC-f0S"/>
-                            <constraint firstItem="bYR-ez-dZn" firstAttribute="width" secondItem="7WM-nf-n0i" secondAttribute="width" id="BgG-fR-5lT"/>
-                            <constraint firstItem="7WM-nf-n0i" firstAttribute="height" secondItem="IYQ-kl-gFl" secondAttribute="height" id="DCW-Bt-xMW"/>
-                            <constraint firstItem="7WM-nf-n0i" firstAttribute="width" secondItem="IYQ-kl-gFl" secondAttribute="width" id="DpD-V6-CFb"/>
-                            <constraint firstItem="IYQ-kl-gFl" firstAttribute="top" secondItem="c3p-PR-fla" secondAttribute="bottom" constant="8" symbolic="YES" id="EAb-6z-Lth"/>
-                            <constraint firstItem="bYR-ez-dZn" firstAttribute="top" secondItem="7WM-nf-n0i" secondAttribute="bottom" constant="8" symbolic="YES" id="L0R-dw-YdO"/>
+                            <constraint firstItem="IYQ-kl-gFl" firstAttribute="top" secondItem="c3p-PR-fla" secondAttribute="bottom" constant="8" symbolic="YES" id="CVw-cg-nBa"/>
                             <constraint firstItem="u0M-Yg-Loy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MkU-6c-2XM"/>
-                            <constraint firstItem="bYR-ez-dZn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RYH-So-PGj"/>
-                            <constraint firstItem="bYR-ez-dZn" firstAttribute="height" secondItem="7WM-nf-n0i" secondAttribute="height" id="UdA-p3-2wu"/>
-                            <constraint firstItem="FB0-Es-XPe" firstAttribute="width" secondItem="7WM-nf-n0i" secondAttribute="width" id="ZFs-gk-HfW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FB0-Es-XPe" secondAttribute="bottom" constant="30" id="arO-FA-X6R"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FB0-Es-XPe" secondAttribute="bottom" constant="50" id="PoE-Pz-Vxi"/>
+                            <constraint firstItem="nmq-dW-Ki1" firstAttribute="top" secondItem="IYQ-kl-gFl" secondAttribute="bottom" constant="8" symbolic="YES" id="Vxa-G7-12N"/>
+                            <constraint firstItem="bYR-ez-dZn" firstAttribute="height" secondItem="FB0-Es-XPe" secondAttribute="height" id="YTS-xT-hvR"/>
+                            <constraint firstItem="7WM-nf-n0i" firstAttribute="leading" secondItem="bYR-ez-dZn" secondAttribute="trailing" constant="8" symbolic="YES" id="ce7-31-vxW"/>
                             <constraint firstItem="nmq-dW-Ki1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cmU-F9-Px4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="c3p-PR-fla" secondAttribute="trailing" constant="20" id="dFG-jG-Gb5"/>
-                            <constraint firstItem="c3p-PR-fla" firstAttribute="top" secondItem="ukM-TL-7Bh" secondAttribute="bottom" constant="8" symbolic="YES" id="eKj-lz-O8d"/>
-                            <constraint firstItem="bYR-ez-dZn" firstAttribute="height" secondItem="IYQ-kl-gFl" secondAttribute="height" id="etp-S8-kGF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7WM-nf-n0i" secondAttribute="bottom" constant="50" id="esi-E8-5jT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bYR-ez-dZn" secondAttribute="bottom" constant="50" id="hDe-2z-UWG"/>
+                            <constraint firstItem="bYR-ez-dZn" firstAttribute="top" secondItem="nmq-dW-Ki1" secondAttribute="bottom" constant="8" symbolic="YES" id="hQ6-uZ-lVA"/>
                             <constraint firstItem="IYQ-kl-gFl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="iwv-Z6-vII"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7WM-nf-n0i" secondAttribute="trailing" constant="20" id="jWw-Gj-zJR"/>
                             <constraint firstItem="ukM-TL-7Bh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="kqr-8B-5YL"/>
-                            <constraint firstItem="FB0-Es-XPe" firstAttribute="height" secondItem="IYQ-kl-gFl" secondAttribute="height" id="unP-6e-1qJ"/>
-                            <constraint firstItem="7WM-nf-n0i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vBZ-KO-1uB"/>
+                            <constraint firstItem="bYR-ez-dZn" firstAttribute="width" secondItem="FB0-Es-XPe" secondAttribute="width" id="tpc-VD-wee"/>
+                            <constraint firstItem="7WM-nf-n0i" firstAttribute="height" secondItem="FB0-Es-XPe" secondAttribute="height" id="xjU-54-Tkr"/>
+                            <constraint firstItem="c3p-PR-fla" firstAttribute="top" secondItem="ukM-TL-7Bh" secondAttribute="bottom" constant="8" symbolic="YES" id="yI8-Uf-IIb"/>
                             <constraint firstItem="ukM-TL-7Bh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zou-1i-2oP"/>
                         </constraints>
                     </view>
